# FinAgent-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/: sample_prices.csv
docs/: API.md  DEPLOYMENT.md  schema.sql
finagent/agents/: graph.py  nodes.py
finagent/api/: main.py
finagent/api/routes/: auth.py  portfolio.py  research.py
finagent/core/: config.py  logging.py  security.py
finagent/db/: models.py  session.py
finagent/quant/: indicators.py  portfolio.py
finagent/schemas/: domain.py
finagent/services/: cache.py  llm.py  market_data.py  memory.py  reports.py
finagent/ui/: app.py
monitoring/: prometheus.yml
reports/: sample_report.md
scripts/: start.sh
tests/: conftest.py  test_agents.py  test_api.py  test_quant.py
